--- a/results.html
+++ b/results.html
@@ -95,10 +95,10 @@ stats"></a></div></noscript>
         }
     }
 
-    econArray = ["Communist","Socialist","Social","Centrist","Market","Capitalist","Laissez-Faire"]
-    diplArray = ["Cosmopolitan","Internationalist","Peaceful","Balanced","Patriotic","Nationalist","Chauvinist"]
-    govtArray = ["Anarchist","Libertarian","Liberal","Moderate","Statist","Authoritarian","Totalitarian"]
-    sctyArray = ["Revolutionary","Very Progressive","Progressive","Neutral","Traditional","Very Traditional","Reactionary"]
+    econArray = ["Communist","Socialist","Socialdemocrat","Mixed Market","Moderate Capitalist","Capitalist","Laissez-Faire"]
+    diplArray = ["Anationalist","Internationalist","Peaceful","Relativist","Patriotic","Nationalist","Imperialism"]
+    govtArray = ["Anarchist","Pro Republican","Republican preference","Parlamentarian","Constitutional","Absolute","Dictatorchip"]
+    sctyArray = ["Revolutionary","Progressive","Reformism","Productive","Conservative","Tradition","Reactionary"]
 
     function setLabel(val,ary) {
         if (val > 100) { return "" } else
